--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -20,7 +20,7 @@
 	</script>
 </head>
 <body>
-	<div class="body">
+	<div class="body clearfix">
 		<div id="nav">
 			<img class="icon" src="{{.Host.Host}}/img/icon.png"/>
 			<div class="nav-center">
@@ -101,9 +101,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="body-bottom">
-			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
-		</div>
+	</div>
+	<div class="body-bottom">
+		<div class="sep"></div>
+		<p>© 2016 小风的个人博客
+			<a class="gov" target="_blank" href="https://www.miitbeian.gov.cn/">浙ICP备16031285号</a>
+		</p>
+		<p class="golang">Written by <a class="write" target="_blank" href="https://golang.org">Golang</a></p>
+		<p class="aliyun">本站由<a href="https://aliyun.com">阿里云</a>提供计算服务与安全服务</p>
 	</div>
 </body>
 </html>
