--- a/src/view/html/about.html
+++ b/src/view/html/about.html
@@ -18,7 +18,7 @@
 	</script>
 </head>
 <body>
-	<div class="body">
+	<div class="body clearfix">
 		<div id="nav">
 			<img class="icon" src="{{.Host.Host}}/img/icon.png"/>
 			<div class="nav-center">
@@ -52,7 +52,7 @@
 			<p style="margin: 10px 0 15px 0; text-align: center; font-size: 16px;">小风</p>
 			<p style="padding-top: 30px; font-size: 19px; margin: 0 auto; width: 300px; text-align: center;">应当静如水</p>
 			<p style="padding-top: 15px; font-size: 19px; margin: 0 auto; width: 300px; text-align: center;">玩技术，爱分享，爱生活，爱老婆</p>
-			<div style="width: 300px; margin: 0 auto; margin-top: 80px; ">
+			<div style="width: 300px; margin: 0 auto; margin-top:30px; ">
 				<p style="text-align: center;">联系我: </p>
 				<p style="margin-top: 10px; text-align: center;">不常玩的微信: 风惜殇</p>
 				<div style="margin: 0 auto; width: 128px; margin-top: 20px;">
@@ -61,9 +61,14 @@
 				<p style="margin-top: 10px; text-align: center;">不常登的Email: <a href="mailto:sjjwind@live.com">sjjwind@live.com</a></p>
 			</div>
 		</div>
-		<div class="body-bottom">
-			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
-		</div>
+	</div>
+	<div class="body-bottom">
+		<div class="sep"></div>
+		<p>© 2016 小风的个人博客
+			<a class="gov" target="_blank" href="https://www.miitbeian.gov.cn/">浙ICP备16031285号</a>
+		</p>
+		<p class="golang">Written by <a class="write" target="_blank" href="https://golang.org">Golang</a></p>
+		<p class="aliyun">本站由<a href="https://aliyun.com">阿里云</a>提供计算服务与安全服务</p>
 	</div>
 </body>
 </html>
