--- a/src/view/html/play.html
+++ b/src/view/html/play.html
@@ -12,17 +12,19 @@
 	<link rel="shortcut icon "href="/img/facvicon.ico" />
 	<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
+		var beforeOnLoad = window.onload;
 		window.onload = function() {
 			$(".clear li").hover(function() {
 				$(this).addClass("nav-open");
 			}, function() {
 				$(this).removeClass("nav-open");
 			});
+			beforeOnLoad();
 		}
 	</script>
 </head>
 <body>
-	<div class="body">
+	<div class="body clearfix">
 		<div id="nav">
 			<img class="icon" src="{{.Host.Host}}/img/icon.png"/>
 			<div class="nav-center">
@@ -81,9 +83,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="body-bottom">
-			<p>Written by <a class="write" target="_blank" href="https://golang.org">Golang</a><a class="gov" target="_blank" href="http://www.miitbeian.gov.cn/">浙ICP备16031285号</a></p>
-		</div>
+	</div>
+	<div class="body-bottom">
+		<div class="sep"></div>
+		<p>© 2016 小风的个人博客
+			<a class="gov" target="_blank" href="https://www.miitbeian.gov.cn/">浙ICP备16031285号</a>
+		</p>
+		<p class="golang">Written by <a class="write" target="_blank" href="https://golang.org">Golang</a></p>
+		<p class="aliyun">本站由<a href="https://aliyun.com">阿里云</a>提供计算服务与安全服务</p>
 	</div>
 </body>
 </html>
